--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,11 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "illuminate/html": "^5.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.7",
+        "spatie/laravel-permission": "^2.19"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
